--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
-<!-- فرض: Font Awesome در <head> اضافه شده -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>بخش عناوین</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Vazir', sans-serif;
+      background-color: #f0f0f0;
+      direction: rtl;
+    }
+
+    .topics-container {
+      padding: 40px 20px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      background-color: #f0f4f8;
+    }
+
+    .topic {
+      background: white;
+      border-radius: 12px;
+      border: 1px solid #ddd;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      transition: all 0.3s ease;
+      overflow: hidden;
+      cursor: pointer;
+    }
+
+    .topic-title {
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-weight: bold;
+      font-size: 16px;
+      transition: all 0.3s ease;
+      border-bottom: 1px solid #eee;
+    }
+
+    .topic-title i {
+      color: #2196f3;
+      font-size: 18px;
+    }
+
+    .topic-content {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.4s ease;
+      padding: 0 20px;
+      background-color: #fafafa;
+    }
+
+    .topic-content a {
+      display: block;
+      margin: 10px 0;
+      color: #333;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    .topic-content a:hover {
+      color: #2196f3;
+    }
+
+    .topic.active {
+      transform: scale(1.03);
+      border-color: #2196f3;
+    }
+
+    .topic.active .topic-title {
+      color: #2196f3;
+    }
+
+    .topic.active .topic-content {
+      max-height: 500px;
+      padding: 15px 20px;
+    }
+  </style>
+</head>
+<body>
 
 <section class="topics-container">
   <div class="topic" onclick="toggleTopic(this)">
-    <div class="topic-title">
-      <i class="fas fa-chart-line"></i>
-      <span>عنوان اول</span>
-    </div>
+    <div class="topic-title"><i class="fas fa-chart-line"></i><span>عنوان اول</span></div>
     <div class="topic-content">
       <a href="#">لینک ۱</a>
       <a href="#">لینک ۲</a>
@@ -16,5 +97,105 @@
     </div>
   </div>
 
-  <!-- تکرار برای عنوان‌های دیگر با آیکون متفاوت -->
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-user-friends"></i><span>عنوان دوم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <!-- 7 مورد دیگر مشابه بالا -->
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-book"></i><span>عنوان سوم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-cogs"></i><span>عنوان چهارم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-briefcase"></i><span>عنوان پنجم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-bullhorn"></i><span>عنوان ششم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-globe"></i><span>عنوان هفتم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-leaf"></i><span>عنوان هشتم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
+  <div class="topic" onclick="toggleTopic(this)">
+    <div class="topic-title"><i class="fas fa-heartbeat"></i><span>عنوان نهم</span></div>
+    <div class="topic-content">
+      <a href="#">لینک ۱</a>
+      <a href="#">لینک ۲</a>
+      <a href="#">لینک ۳</a>
+      <a href="#">لینک ۴</a>
+      <a href="#">لینک ۵</a>
+    </div>
+  </div>
+
 </section>
+
+<script>
+  function toggleTopic(element) {
+    document.querySelectorAll('.topic').forEach(el => {
+      if (el !== element) el.classList.remove('active');
+    });
+    element.classList.toggle('active');
+  }
+</script>
+
+</body>
+</html>
