--- a/index.html
+++ b/index.html
@@ -5,17 +5,9 @@
   <title>Apple Style Header</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * {box-sizing: border-box; margin: 0; padding: 0;}
+    body {font-family: sans-serif;}
 
-    body {
-      font-family: sans-serif;
-    }
-
-    /* نوار بالا */
     .top-nav {
       display: flex;
       justify-content: center;
@@ -26,33 +18,42 @@
       border-bottom: 1px solid #ddd;
     }
 
-    .top-nav a {
+    .nav-item {
       margin: 0 15px;
-      text-decoration: none;
-      color: #333;
-      font-size: 14px;
       position: relative;
-      padding: 5px;
-      cursor: pointer;
     }
 
-    .top-nav a:hover {
+    .nav-button {
+      font-size: 14px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: #333;
+      padding: 5px;
+    }
+
+    .nav-button:hover,
+    .nav-button.active {
       color: #0071e3;
     }
 
-    /* مگا منو */
     .mega-menu {
-      position: absolute;
-      top: 100%;
-      width: 100%;
-      background: #fff;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       display: none;
+      position: absolute;
+      top: 40px;
+      right: 0;
+      width: 100vw;
+      background: #fff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-top: 1px solid #eee;
       padding: 40px 100px;
       grid-template-columns: repeat(3, 1fr);
       column-gap: 60px;
       z-index: 9;
-      border-top: 1px solid #eee;
+    }
+
+    .mega-menu.show {
+      display: grid;
     }
 
     .mega-menu .col {
@@ -61,31 +62,22 @@
     }
 
     .mega-menu .col h4 {
-      margin-bottom: 10px;
       font-size: 14px;
-      color: #666;
+      color: #888;
+      margin-bottom: 10px;
     }
 
     .mega-menu .col a {
       font-size: 16px;
       margin: 6px 0;
-      color: #000;
       text-decoration: none;
+      color: #000;
     }
 
     .mega-menu .col a:hover {
       color: #0071e3;
     }
 
-    .menu-container {
-      position: relative;
-    }
-
-    .menu-container:hover .mega-menu {
-      display: grid;
-    }
-
-    /* تصویر هدر */
     .header-image {
       width: 100%;
       height: 300px;
@@ -103,18 +95,16 @@
 </head>
 <body>
 
-<!-- هدر -->
 <header>
   <nav class="top-nav">
-    <div class="menu-container">
-      <a>Mac</a>
-      <div class="mega-menu">
+    <div class="nav-item">
+      <button class="nav-button" onclick="toggleMenu('macMenu', this)">Mac</button>
+      <div class="mega-menu" id="macMenu">
         <div class="col">
           <h4>مرور Mac</h4>
           <a href="#">MacBook Air</a>
           <a href="#">MacBook Pro</a>
           <a href="#">iMac</a>
-          <a href="#">Mac mini</a>
         </div>
         <div class="col">
           <h4>خرید</h4>
@@ -130,9 +120,10 @@
         </div>
       </div>
     </div>
-    <div class="menu-container">
-      <a>iPhone</a>
-      <div class="mega-menu">
+
+    <div class="nav-item">
+      <button class="nav-button" onclick="toggleMenu('iphoneMenu', this)">iPhone</button>
+      <div class="mega-menu" id="iphoneMenu">
         <div class="col">
           <h4>مدل‌ها</h4>
           <a href="#">iPhone 15</a>
@@ -151,12 +142,47 @@
         </div>
       </div>
     </div>
-    <!-- موارد دیگر مانند iPad، Watch... -->
   </nav>
 </header>
 
-<!-- تصویر هدر -->
 <div class="header-image"></div>
+
+<script>
+  function toggleMenu(menuId, button) {
+    const menus = document.querySelectorAll('.mega-menu');
+    const buttons = document.querySelectorAll('.nav-button');
+
+    menus.forEach(menu => {
+      if (menu.id !== menuId) {
+        menu.classList.remove('show');
+      }
+    });
+
+    buttons.forEach(btn => {
+      if (btn !== button) {
+        btn.classList.remove('active');
+      }
+    });
+
+    const targetMenu = document.getElementById(menuId);
+    if (targetMenu.classList.contains('show')) {
+      targetMenu.classList.remove('show');
+      button.classList.remove('active');
+    } else {
+      targetMenu.classList.add('show');
+      button.classList.add('active');
+    }
+  }
+
+  // بستن منو با کلیک بیرون
+  document.addEventListener('click', function(event) {
+    const isNav = event.target.closest('.nav-item');
+    if (!isNav) {
+      document.querySelectorAll('.mega-menu').forEach(menu => menu.classList.remove('show'));
+      document.querySelectorAll('.nav-button').forEach(btn => btn.classList.remove('active'));
+    }
+  });
+</script>
 
 </body>
 </html>
