--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 15px 0;
+      padding: 25px 0; /* افزایش فاصله بالا و پایین */
     }
 
     ul.nav-items {
       list-style: none;
       display: flex;
-      gap: 40px;
+      gap: 50px;
       padding: 0;
       margin: 0;
     }
 
     li.nav-item {
       cursor: pointer;
-      font-weight: 500;
-      font-size: 16px;
+      font-weight: 600;
+      font-size: 18px; /* بزرگ‌تر شدن فونت */
       position: relative;
       transition: all 0.3s ease;
     }
@@ -58,11 +58,11 @@
       display: none;
       position: absolute;
       top: 100%;
-      width: 100%;
       background: #f9f9f9;
-      padding: 30px 40px;
+      padding: 25px 40px; /* فاصله کمتر نسبت به هدر */
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       border-top: 1px solid #ddd;
+      width: 100%;
       display: none;
       flex-wrap: nowrap;
       justify-content: center;
@@ -91,6 +91,7 @@
       color: #333;
       margin-bottom: 8px;
       transition: all 0.2s ease;
+      font-size: 15px;
     }
 
     .column a:hover {
@@ -192,7 +193,6 @@
       });
     });
 
-    // کلیک بیرون برای بستن منو
     window.addEventListener('click', function (e) {
       if (!e.target.closest('.nav-item') && !e.target.closest('.mega-menu')) {
         menus.forEach(menu => menu.classList.remove('active'));
