--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>هدر با منوی بازشونده</title>
+  <title>هدر اپلی واکنش‌گرا</title>
   <style>
     * {
       box-sizing: border-box;
@@ -13,39 +13,51 @@
       margin: 0;
       font-family: sans-serif;
       background-color: #fff;
+      direction: rtl;
     }
 
-    header.main-header {
-      background-color: #ffffff;
+    header {
+      background-color: #fff;
       border-bottom: 1px solid #ddd;
-      position: relative;
-      z-index: 100;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
-    nav.navbar {
+    .navbar {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      padding: 25px 0; /* افزایش فاصله بالا و پایین */
+      padding: 22px 30px;
     }
 
-    ul.nav-items {
-      list-style: none;
-      display: flex;
-      gap: 50px;
-      padding: 0;
-      margin: 0;
+    .logo {
+      font-weight: bold;
+      font-size: 20px;
     }
 
-    li.nav-item {
+    .nav-toggle {
+      display: none;
+      font-size: 28px;
       cursor: pointer;
-      font-weight: 600;
-      font-size: 18px; /* بزرگ‌تر شدن فونت */
-      position: relative;
-      transition: all 0.3s ease;
     }
 
-    li.nav-item:hover {
+    .nav-items {
+      display: flex;
+      gap: 35px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .nav-item {
+      position: relative;
+      font-size: 18px;
+      cursor: pointer;
+      font-weight: 500;
+    }
+
+    .nav-item:hover {
       color: #0071e3;
     }
 
@@ -59,13 +71,13 @@
       position: absolute;
       top: 100%;
       background: #f9f9f9;
-      padding: 25px 40px; /* فاصله کمتر نسبت به هدر */
+      padding: 15px 40px; /* فاصله کمتر از هدر */
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       border-top: 1px solid #ddd;
       width: 100%;
       display: none;
-      flex-wrap: nowrap;
-      justify-content: center;
+      flex-wrap: wrap;
+      justify-content: flex-start;
       direction: rtl;
     }
 
@@ -76,7 +88,7 @@
     .column {
       flex: 1;
       max-width: 250px;
-      margin: 0 20px;
+      margin-left: 40px;
     }
 
     .column h4 {
@@ -98,88 +110,104 @@
       color: #0071e3;
       font-weight: bold;
     }
+
+    /* موبایل */
+    @media (max-width: 768px) {
+      .nav-toggle {
+        display: block;
+      }
+
+      .nav-items {
+        display: none;
+        flex-direction: column;
+        gap: 20px;
+        background-color: #fff;
+        padding: 20px;
+        position: absolute;
+        top: 70px;
+        right: 0;
+        width: 100%;
+        border-top: 1px solid #ddd;
+      }
+
+      .nav-items.show {
+        display: flex;
+      }
+
+      .mega-menu {
+        position: relative;
+        top: 0;
+        box-shadow: none;
+        padding: 10px 20px;
+      }
+
+      .column {
+        max-width: 100%;
+        margin: 15px 0;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <header class="main-header">
-    <nav class="navbar">
-      <ul class="nav-items">
-        <li class="nav-item" data-target="menu-mac">Mac</li>
-        <li class="nav-item" data-target="menu-iphone">iPhone</li>
-        <li class="nav-item" data-target="menu-watch">Watch</li>
+  <header>
+    <div class="navbar">
+      <div class="logo">لوگو</div>
+      <div class="nav-toggle" id="nav-toggle">&#9776;</div>
+      <ul class="nav-items" id="nav-items">
+        <li class="nav-item" data-target="menu-mac">مک</li>
+        <li class="nav-item" data-target="menu-iphone">آیفون</li>
+        <li class="nav-item" data-target="menu-watch">ساعت</li>
       </ul>
-    </nav>
+    </div>
   </header>
 
   <div class="mega-menu-wrapper">
-    <!-- Mac Menu -->
+    <!-- منوی مک -->
     <div class="mega-menu" id="menu-mac">
       <div class="column">
-        <h4>مدل‌های Mac</h4>
-        <a href="#">MacBook Air</a>
-        <a href="#">MacBook Pro</a>
-        <a href="#">iMac</a>
-        <a href="#">Mac mini</a>
+        <h4>مدل‌های مک</h4>
+        <a href="#">مک‌بوک ایر</a>
+        <a href="#">مک‌بوک پرو</a>
+        <a href="#">آی‌مک</a>
       </div>
       <div class="column">
-        <h4>خرید Mac</h4>
+        <h4>راهنما</h4>
         <a href="#">مقایسه مدل‌ها</a>
-        <a href="#">تجارت دستگاه</a>
-        <a href="#">تخفیف دانشجویی</a>
-      </div>
-      <div class="column">
-        <h4>ویژگی‌ها</h4>
-        <a href="#">Apple Silicon</a>
-        <a href="#">iCloud</a>
-        <a href="#">macOS</a>
+        <a href="#">خرید ویژه دانشجویان</a>
       </div>
     </div>
 
-    <!-- iPhone Menu -->
+    <!-- منوی آیفون -->
     <div class="mega-menu" id="menu-iphone">
       <div class="column">
-        <h4>مدل‌ها</h4>
-        <a href="#">iPhone 15</a>
-        <a href="#">iPhone 15 Plus</a>
-        <a href="#">iPhone 15 Pro</a>
-        <a href="#">iPhone 15 Pro Max</a>
-      </div>
-      <div class="column">
-        <h4>خرید</h4>
-        <a href="#">تجارت آیفون قدیمی</a>
-        <a href="#">برنامه اقساطی</a>
-      </div>
-      <div class="column">
-        <h4>ویژگی‌ها</h4>
-        <a href="#">دوربین</a>
-        <a href="#">امنیت</a>
-        <a href="#">باتری</a>
+        <h4>مدل‌های آیفون</h4>
+        <a href="#">آیفون ۱۵</a>
+        <a href="#">آیفون ۱۵ پرو</a>
       </div>
     </div>
 
-    <!-- Watch Menu -->
+    <!-- منوی ساعت -->
     <div class="mega-menu" id="menu-watch">
       <div class="column">
-        <h4>مدل‌ها</h4>
-        <a href="#">Apple Watch Series 9</a>
-        <a href="#">Apple Watch Ultra 2</a>
-        <a href="#">Apple Watch SE</a>
-      </div>
-      <div class="column">
-        <h4>ویژگی‌ها</h4>
-        <a href="#">سلامت</a>
-        <a href="#">ورزش</a>
-        <a href="#">سبک زندگی</a>
+        <h4>مدل‌های ساعت</h4>
+        <a href="#">سری ۹</a>
+        <a href="#">اولترا ۲</a>
       </div>
     </div>
   </div>
 
   <script>
-    const navItems = document.querySelectorAll('.nav-item');
+    const navToggle = document.getElementById('nav-toggle');
+    const navItems = document.getElementById('nav-items');
+    const menuItems = document.querySelectorAll('.nav-item');
     const menus = document.querySelectorAll('.mega-menu');
 
-    navItems.forEach(item => {
+    navToggle.addEventListener('click', () => {
+      navItems.classList.toggle('show');
+    });
+
+    menuItems.forEach(item => {
       item.addEventListener('click', () => {
         const target = item.getAttribute('data-target');
 
@@ -193,9 +221,11 @@
       });
     });
 
+    // بستن منو با کلیک بیرون
     window.addEventListener('click', function (e) {
-      if (!e.target.closest('.nav-item') && !e.target.closest('.mega-menu')) {
+      if (!e.target.closest('.nav-item') && !e.target.closest('.mega-menu') && !e.target.closest('#nav-toggle')) {
         menus.forEach(menu => menu.classList.remove('active'));
+        navItems.classList.remove('show');
       }
     });
   </script>
