--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8" />
@@ -9,150 +10,146 @@
       box-sizing: border-box;
     }
 
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-color: #fff;
-      direction: rtl;
-    }
+```
+body {
+  margin: 0;
+  font-family: sans-serif;
+  background-color: #fff;
+  direction: rtl;
+}
 
-    header {
-      background-color: #fff;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
+header {
+  background-color: #fff;
+  border-bottom: 1px solid #ddd;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 
-    .navbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 22px 30px;
-      flex-direction: row;
-    }
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 22px 30px;
+}
 
-    .logo {
-      font-weight: bold;
-      font-size: 20px;
-    }
+.logo {
+  font-weight: bold;
+  font-size: 20px;
+}
 
-    .nav-toggle {
-      display: none;
-      font-size: 28px;
-      cursor: pointer;
-    }
+.nav-toggle {
+  display: none;
+  font-size: 28px;
+  cursor: pointer;
+}
 
-    .nav-items {
-      display: flex;
-      gap: 25px;
-      list-style: none;
-      margin: 0;
-      padding: 0;
-    }
+.nav-items {
+  display: flex;
+  gap: 35px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-    .nav-item {
-      position: relative;
-      font-size: 18px;
-      cursor: pointer;
-      font-weight: 500;
-    }
+.nav-item {
+  position: relative;
+  font-size: 18px;
+  cursor: pointer;
+  font-weight: 500;
+}
 
-    .nav-item:hover {
-      color: #0071e3;
-    }
+.nav-item:hover {
+  color: #0071e3;
+}
 
-    .mega-menu-wrapper {
-      position: relative;
-      width: 100%;
-    }
+.mega-menu-wrapper {
+  position: relative;
+  width: 100%;
+}
 
-    .mega-menu {
-      display: none;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      background: rgba(255, 255, 255, 0.7);
-      backdrop-filter: blur(10px);
-      padding: 20px 40px;
-      border-top: 1px solid #ddd;
-      width: 100%;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      direction: rtl;
-      z-index: 999;
-    }
+.mega-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  background: #f9f9f9;
+  padding: 15px 40px; /* فاصله کمتر از هدر */
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #ddd;
+  width: 100%;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  direction: rtl;
+}
 
-    .mega-menu.active {
-      display: flex;
-    }
+.mega-menu.active {
+  display: flex;
+}
 
-    .column {
-      flex: 1;
-      max-width: 250px;
-      margin-left: 40px;
-    }
+.column {
+  flex: 1;
+  max-width: 250px;
+  margin-left: 40px;
+}
 
-    .column h4 {
-      font-size: 16px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
+.column h4 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
 
-    .column a {
-      display: block;
-      text-decoration: none;
-      color: #333;
-      margin-bottom: 8px;
-      transition: all 0.2s ease;
-      font-size: 15px;
-    }
+.column a {
+  display: block;
+  text-decoration: none;
+  color: #333;
+  margin-bottom: 8px;
+  transition: all 0.2s ease;
+  font-size: 15px;
+}
 
-    .column a:hover {
-      color: #0071e3;
-      font-weight: bold;
-    }
+.column a:hover {
+  color: #0071e3;
+  font-weight: bold;
+}
 
-    img.header-image {
-      width: 100%;
-      display: block;
-    }
+/* موبایل */
+@media (max-width: 768px) {
+  .nav-toggle {
+    display: block;
+  }
 
-    /* موبایل */
-    @media (max-width: 768px) {
-      .nav-toggle {
-        display: block;
-      }
+  .nav-items {
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    background-color: #fff;
+    padding: 20px;
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 100%;
+    border-top: 1px solid #ddd;
+  }
 
-      .nav-items {
-        display: none;
-        flex-direction: column;
-        gap: 20px;
-        background-color: #fff;
-        padding: 20px;
-        position: absolute;
-        top: 70px;
-        right: 0;
-        width: 100%;
-        border-top: 1px solid #ddd;
-      }
+  .nav-items.show {
+    display: flex;
+  }
 
-      .nav-items.show {
-        display: flex;
-      }
+  .mega-menu {
+    position: relative;
+    top: 0;
+    box-shadow: none;
+    padding: 10px 20px;
+  }
 
-      .mega-menu {
-        position: relative;
-        top: 0;
-        box-shadow: none;
-        padding: 10px 20px;
-      }
+  .column {
+    max-width: 100%;
+    margin: 15px 0;
+  }
+}
+```
 
-      .column {
-        max-width: 100%;
-        margin: 15px 0;
-      }
-    }
   </style>
 </head>
 <body>
@@ -168,9 +165,6 @@
       </ul>
     </div>
   </header>
-
-  <!-- تصویر زیر هدر -->
-  <img src="header.png" alt="هدر" class="header-image" />
 
   <div class="mega-menu-wrapper">
     <!-- منوی مک -->
@@ -188,23 +182,26 @@
       </div>
     </div>
 
-    <!-- منوی آیفون -->
-    <div class="mega-menu" id="menu-iphone">
-      <div class="column">
-        <h4>مدل‌های آیفون</h4>
-        <a href="#">آیفون ۱۵</a>
-        <a href="#">آیفون ۱۵ پرو</a>
-      </div>
-    </div>
+```
+<!-- منوی آیفون -->
+<div class="mega-menu" id="menu-iphone">
+  <div class="column">
+    <h4>مدل‌های آیفون</h4>
+    <a href="#">آیفون ۱۵</a>
+    <a href="#">آیفون ۱۵ پرو</a>
+  </div>
+</div>
 
-    <!-- منوی ساعت -->
-    <div class="mega-menu" id="menu-watch">
-      <div class="column">
-        <h4>مدل‌های ساعت</h4>
-        <a href="#">سری ۹</a>
-        <a href="#">اولترا ۲</a>
-      </div>
-    </div>
+<!-- منوی ساعت -->
+<div class="mega-menu" id="menu-watch">
+  <div class="column">
+    <h4>مدل‌های ساعت</h4>
+    <a href="#">سری ۹</a>
+    <a href="#">اولترا ۲</a>
+  </div>
+</div>
+```
+
   </div>
 
   <script>
