--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@ header {
 <body>
 
   <header>
+<!-- اینجا تصویر هدر اضافه می‌شود -->
+<img src="header.png" alt="تصویر هدر" class="header-image" />
+
     <div class="navbar">
       <div class="logo">لوگو</div>
       <div class="nav-toggle" id="nav-toggle">&#9776;</div>
