--- a/index.html
+++ b/index.html
@@ -60,21 +60,23 @@
       z-index: 999;
     }
 
-    .mega-menu {
-      display: none;
-      position: absolute;
-      top: 100%;
-      right: 0;
-      left: 0;
-      background: rgba(255, 255, 255, 0.7);
-      backdrop-filter: blur(10px);
-      padding: 20px 40px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      border-top: 1px solid #ddd;
-      flex-wrap: wrap;
-      justify-content: flex-start;
-      direction: rtl;
-    }
+  .mega-menu {
+  display: none;
+  position: fixed;
+  top: 80px; /* این مقدار را بسته به ارتفاع هدر تنظیم کن */
+  right: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.7);
+  backdrop-filter: blur(10px);
+  padding: 20px 40px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #ddd;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  direction: rtl;
+  z-index: 1000;
+}
+
 
     .mega-menu.active {
       display: flex;
