--- a/index.html
+++ b/index.html
@@ -170,9 +170,66 @@
       </div>
       <button class="button">جزئیات</button>
     </div>
-
-    <!-- دکمه نمایش بیشتر -->
-    <a href="more-news.html" class="more-btn">نمایش اخبار بیشتر</a>
+    <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div>
+        <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div>
+       <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div> 
+      <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div> 
+        <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div>
+        <div class="app">
+      <div class="app-info">
+        <img src="https://via.placeholder.com/64" alt="خبر ۵">
+        <div class="app-text">
+          <div class="app-title">خبر پنج</div>
+          <div class="app-subtitle">توضیح خبر پنج</div>
+        </div>
+      </div>
+      <button class="button">جزئیات</button>
+    </div>
   </div>
 
 </body>
